Update pom.xml
Modificacion del pom.xml, se añadieron dependencias